# mmapped_df

./: README.md  pyproject.toml  setup.py
mmapped_df/: cli.py  main.py  misc.py  numba_helper.py
mmapped_df/tools/: mmapped_df_convert.py  mmapped_df_uncompress_tdf.py
tests/: indexed_reader.py  main.py  mkindexedreader_test.py  mkjointest.py  mktest.py  the_join.py
tools/: mmapped_df_convert.py  mmapped_df_from_clusters_hdf.py  mmapped_df_uncompress_tdf.py
